# AI-for-Quorridor

./: README.md  haskell-quoridor.cabal  readme(technical).md
docs/: .spec.pdf.icloud
src/: Action.hi  Action.hs  Board.hi  Board.hs  Cell.hi  Cell.hs  Constants.hi  Constants.hs  Game.hi  Game.hs  Main.hs  Player.hi  Player.hs  Print.hi  Print.hs  Types.hi  Types.hs
src/Players/: Dumb.hi  Dumb.hs  Human.hi  Human.hs  Minimax.hi  Minimax.hs  Reed.hi  Reed.hs  Reed.txt
tests/Basic/: ActionTest.hs  BoardTest.hs  CellTest.hs  GameTest.hs  HumanTest.hs  Main.hs  PlayerTest.hs
tests/Minimax/: GenerateGameTreeTest.hs  Main.hs  OrderingTreeTest.hs  PruneBreadthTest.hs  PruneDepthTest.hs  UtilityTest.hs
tests/Minimax/Util/: Assertion.hs  GameInstances.hs  StateTreeInstances.hs
